--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <title>Startup</title>
 
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
@@ -13,6 +17,19 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-
+    <div class="container d-flex align-items-center h-100">
+      <div class="row">
+        <header class="text-center col-12">
+          <h1 class="text-uppercase"><strong>The biggest startup event of the year </strong></h1>
+        </header>
+        <div class="buffer col-12"></div>
+        <section class="text-center col-12">
+          <hr>
+          <a href="https://mailchi.mp/ca0407105117/startup_event" target="_blank">
+            <button class="btn btn-primary btn-xl">Find out more!</button>
+          </a>
+        </section>
+      </div>
+    </div>
   </body>
 </html>
